Added links, oneko, flowers, background

--- a/index.html
+++ b/index.html
@@ -1,9 +1,49 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+<body style="background-color: #FFB7C5;">
 <body>
 
 <h1>How many Fish does it take to webdev?</h1>
 <p>More than this, apparently...</p>
 
+<h2>Useful links</h2>
+<a href="https://cash.app/$blubblubmeowmeow">Cash App</a>
+<br>
+<a href="https://discordapp.com/users/236699521545928705">Discord</a>
+<br>
+<a href="https://x.com/blubblubmeow">Twitter</a>
+<br>
+<a href="https://myfigurecollection.net/profile/blubblubmeowmeow">My Figure Collection</a>
+<br>
+<a href="https://www.instagram.com/blubblubmeowmeow">Instragram</a>
+<br>
+<a href="https://www.tiktok.com/@blubblubmeowmeow">TikTok</a>
+<br>
+<p>This site proudly developed in Notepad++</p>
+<p>Dial 988 if you or someone you know is experiencing suicidal thoughts.</p>
+
+
+
+<div id="container"></div>
+<style>
+.dot{
+  width:35px;
+  height:35px;
+  position:absolute;
+  background: url(./assets/flower.png);
+  background-size: 100% 100%;
+}
+  div#container {
+    width: 100% !important;
+    height: 100% !important;
+}
+
+section, .section-border, .section-background {
+    background-color: transparent !important;
+}
+</style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+<script src="./scripts/oneko.js"></script>
+<script src="./scripts/flowers.js"></script>
 </body>
 </html> 
