--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <h2>Useful links</h2>
     <nav>
-        <a href="https://cash.app/$blubblubmeowmeow">Cash App</a>
-        <a href="https://discordapp.com/users/236699521545928705">Discord</a>
-        <a href="https://x.com/blubblubmeow">Twitter</a>
-        <a href="https://myfigurecollection.net/profile/blubblubmeowmeow">My Figure Collection</a>
-        <a href="https://www.instagram.com/blubblubmeowmeow">Instagram</a>
+        <a href="https://cash.app/$blubblubmeowmeow">Cash App</a> |
+        <a href="https://discordapp.com/users/236699521545928705">Discord</a> |
+        <a href="https://x.com/blubblubmeow">Twitter</a> |
+        <a href="https://myfigurecollection.net/profile/blubblubmeowmeow">My Figure Collection</a> |
+        <a href="https://www.instagram.com/blubblubmeowmeow">Instagram</a> |
         <a href="https://www.tiktok.com/@blubblubmeowmeow">TikTok</a>
     </nav>
-<p>Dial 988 if you or someone you know is experiencing suicidal thoughts.</p>
+<p class="important">Dial 988 if you or someone you know is experiencing suicidal thoughts.</p>
 
 <div id="container"></div> <!--Container for flowers-->
 
