--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
     </nav>
 <p class="important">Dial 988 if you or someone you know is experiencing suicidal thoughts.</p>
 
-<div id="container"></div> <!--Container for flowers-->
+<div id="flowers"></div> <!--Container for flowers-->
+<div id="fish"></div>
 
 <footer>&copy; 2024 Fish | All Rights Reserved</footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script src="./scripts/oneko.js"></script>
 <script src="./scripts/flowers.js"></script>
+
 </body>
 </html> 
