--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
 <p class="important">Dial 988 if you or someone you know is experiencing suicidal thoughts.</p>
 
 <div id="flowers"></div> <!--Container for flowers-->
-<div id="fish"></div>
 
 <footer>&copy; 2024 Fish | All Rights Reserved</footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 <script src="./scripts/oneko.js"></script>
 <script src="./scripts/flowers.js"></script>
 
