--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 <p class="important">Dial 988 if you or someone you know is experiencing suicidal thoughts.</p>
 
-<div id="flowers"></div> <!--Container for flowers-->
+<div id="animation-wrapper"><div id="flowers"></div></div>
 
 <footer>&copy; 2024 Fish | All Rights Reserved</footer>
 
