--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <p>More than this, apparently...</p>
 
 <h2>Useful links</h2>
+	<nav>
+        <a href="/blog/blog0.html">Blog 0</a>
+    </nav>
     <nav>
         <a href="https://cash.app/$blubblubmeowmeow">Cash App</a> |
         <a href="https://discordapp.com/users/236699521545928705">Discord</a> |
@@ -23,6 +26,7 @@
 
 <div id="animation-wrapper"><div id="flowers"></div></div>
 
+<hr>
 <footer>&copy; 2024 Fish | All Rights Reserved</footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
